# it_design

./: README.md
app/: .prettierrc.js  App.tsx  app.json  colors.ts  package.json  tailwind.config.js  tailwind.css  tailwind.json
app/android/: settings.gradle
app/android/app/: _BUCK  build.gradle
app/android/app/src/debug/java/com/cs/: ReactNativeFlipper.java
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/cs/: MainActivity.java  MainApplication.java
app/android/app/src/main/java/com/cs/newarchitecture/: MainApplicationReactNativeHost.java
app/android/app/src/main/jni/: CMakeLists.txt  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
app/android/app/src/main/res/values/: strings.xml
app/ios/: Podfile
app/ios/cs/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
app/ios/cs.xcodeproj/: project.pbxproj
app/ios/cs.xcodeproj/xcshareddata/xcschemes/: cs.xcscheme
app/ios/cs.xcworkspace/: contents.xcworkspacedata
app/ios/csTests/: csTests.m
app/src/components/: Button.tsx  Input.tsx  Touchable.tsx
app/src/components/show/: Chart.tsx  Result.tsx
app/src/pages/: Countdown.tsx  Main.tsx  Scan.tsx  Setting.tsx  Show.tsx
app/src/store/: bleManager.ts  peripheralState.ts  settingState.ts
app/src/types/: interfaces.ts
app/src/utils/: callApi.ts  common.ts  constants.ts  permission.ts  styles.ts
k8s/: deploy.yaml  ingress.yaml  namespace.yaml
segger/: main.c
server/: Dockerfile  hi.json  pyproject.toml  test.json  test.py  test_ecg.py
server/app/: main.py  process.py
(+2 files in other folders)
