[tool.poetry]
name = "cs"
version = "0.1.0"
description = ""
authors = ["Byeongjun Kim <kbjun323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
scipy = "^1.9.2"
matplotlib = "^3.6.1"
numpy = "^1.23.3"
neurokit2 = "^0.2.1"
fastapi = "^0.86.0"
pydantic = "^1.10.2"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
